<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_UR_PN_STATE" Id="{b437ff4d-c86b-401c-9a33-299e190ac2cf}">
    <Declaration><![CDATA[TYPE TYP_UR_PN_STATE :
STRUCT
	MajVersion : USINT; // Controller major version
	MinVersion : USINT; // Controller minor version
	RobotMode : E_UR_PN_ROBOT_MODE;
	RTMd : UINT; // Real time machine days
	RTMh : UINT; // Real time machine hours
	RTMm : UINT; // Real time machine days
	RTMs : UINT; // Real time machine days
	RTMms : UINT; // Real time machine milliseconds
	Power : BOOL;
	ProgramRunning : BOOL;
	PowerButton : BOOL;
	TeachButton : BOOL;
	RobotCurrent : REAL; // Current power consumption A
	NormalMode: BOOL;
	ReducedMode: BOOL;
	ProtectiveStopped: BOOL;
	RecoveryMode: BOOL;
	SafeguardStop: BOOL;
	SystemEmergencyStopped: BOOL;
	RobotEmergencyStopped: BOOL;
	EmergencyStopped: BOOL;
	Violation: BOOL;
	Faulted: BOOL;
	SafetyStopped: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>